# EngageDynamics

./: README.md  index.html
codebook/: Codebook-Meeting.xlsx  Codebook-MultipartyMeeting-MHCI-plot.xlsx
humanSensing/: Makefile  cmake_install.cmake  humansense.cbp  humansense.cpp  humansense.h  main  main.cbp  main.cpp  naosensors.cpp  naosensors.h  newauto.cpp  newauto.h  operations.cpp  operations.h  setup.cpp  setup.h  sharedvar.cpp  sharedvar.h
humanSensing/NaoAction3/: CMakeLists.txt  README.md  actions.cpp  actions_utils.cpp  human_state.cpp  human_state.h  interface.cpp  interface.h  main.cpp  motion_utils.cpp  motion_utils.h  nao_action.cpp  nao_action.h  qiproject.xml  test.cpp  test.h  trim.h
humanSensing/dialogModule/: converter.cpp  converter.h  curl.sh  dialog.sh  dialogtext.cpp  exec_shell.cpp  exec_shell.h  grabcafe.h  main.cpp  wakeup.cpp  wakeup.h
testdialog/: CMakeLists.txt  compile.sh  converter.cpp  converter.h  dialogtext.cpp  dialogtext.h  grabcafe.cpp  qiproject.xml  test.sh  tulingmodule.cpp  tulingmodule.h  upload.sh  wakeup.cpp  wakeup.h
testdialog/.qi/: path.conf
testdialog/.qi/deploy-naoqisdk/: deploy_manifest.txt  remote_gdbserver.sh  setup.gdb  setup_target.gdb
